[B]2.2.1[/B]
Fix only display widgets on up
Better visibility handling for widgets

[B]2.2.0[/B]
Add skinshortcuts widget templates for persistent widgets (no reloading)
Fix extendedinfo browser views tag

[B]2.1.4[/B]
Fix extended info dialogs for ExtendedInfo 4.0

[B]2.1.3[/B]
Make fallback image / widget option more intuitive and obvious
Clean up shortcuts customisation dialog
Add toolbox to dependencies
Clean up settings

[B]2.1.2[/B]
Add weather icon and fanart resource selection dialog
Add scrollbar to Big Icons view in MyMusicNav
Add widget aspect options
Add skinshortcuts new widget selection style (will require widgets reselecting widgets)
Widen shortcuts setup dialog and add names

[B]2.1.1[/B]
Add oninfo command for home widgets
Fix BigIcon flicker issue

[B]2.1.0[/B]
Jarvis work
Remove redundant windows:
- MusicOverlay.xml
- VideoOVerlay.xml
- VisualisationPresetList.xml
- DialogFileStacking.xml
- MyMusicSongs.xml
- DialogPeripheralManager.xml

Remove redundant tag <allowoverlay>
Add <menucontrol>9000</menucontrol> for view menu access from menu button
Add disabled radiobutton textures
Add disabled spincontrol textures
Remove id 11 from DialogAddonInfo.xml
Remove id 10 11 from DialogSongInfo.xml
Remove files mdoe from MyMusicNav.xml
Remove .gif busyspinners due to issues with gifs on various platforms (more options coming soon)


[B]2.0.7[/B]
Add mouse warning
Fix touch lockout

[B]2.0.6[/B]
Hopefully fix weather fanart widget bug
Fix ExtraInfo LowList bug
Fix Content Provider bug

[B]2.0.5[/B]
Fix tvshow hub item label
Fix overlay showing in wrong spot
Fix kaitoast
Fix skin init stuff

[B]2.0.4[/B]
Use skin helper service for sets info (can use either that or skin.info)
Music playlist or file for startup playlist
Use background fallback fanart when disable fanart is on
Fix RSS for vertical
Fix label width PVR header

[B]2.0.3[/B]
New viewtype - Fanart Thumbs
Put move and delete buttons next to label in customisation screen

[B]2.0.2[/B]