@@ -9,12 +9,6 @@
             <control type="list" id="301">
                 <skinshortcuts>visibility</skinshortcuts>
                 <description>Plugin Content Widget</description>
-                <visible>IntegerGreaterThan(Container(301).NumItems,0) | Container(301).IsUpdating</visible>
-                <visible>Control.HasFocus(301) | ControlGroup(303).HasFocus() | !Skin.HasSetting(home.dontautoshowwidget)</visible>
-                <!-- <visible>Control.HasFocus(301) | !Skin.HasSetting(home.dontautoshowwidget)</visible> -->
-                <!-- <include>Animation.FadeIn</include>
-                <animation effect="fade" start="100" end="0" time="0" delay="0" reversible="false" condition="Control.IsVisible(9201) | Container(301).IsUpdating">Conditional</animation>
-                <animation effect="fade" start="0" end="100" time="350" tween="cubic" easing="inout" delay="100" reversible="false" condition="!Control.IsVisible(9201) + !Container(301).IsUpdating">Conditional</animation> -->
                 <left>70</left>
                 <right>70</right>
                 <top>20</top>
