@@ -1,6 +1,7 @@
 [B]2.2.1[/B]
 Fix only display widgets on up
 Better visibility handling for widgets
+Add weather widget to Classic home
 
 [B]2.2.0[/B]
 Add skinshortcuts widget templates for persistent widgets (no reloading)
